# meter_infer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.json  device_info.txt
.cache/clangd/index/: common.hpp.AA5CD01A432AC8C5.idx  config.cpp.78B9D155E3B6EA30.idx  config.hpp.7863DDB0B647F1E6.idx  detect.cpp.E281BEDCFB0077EF.idx  detect.hpp.A66D16B928D9EA11.idx  main.cpp.83D905AF909BE25C.idx  meter_reader.cpp.7B58B2596A7A7DA9.idx  meter_reader.hpp.B36322ACB4998E95.idx  stream_to_img.cpp.120BE3BB1C491B00.idx  stream_to_img.hpp.92B6A76C5F8C6D55.idx
include/: cmdline.hpp  common.hpp  config.hpp  detect.hpp  infer.hpp  meter_reader.hpp  mysql.hpp  pro_con.hpp  segment.hpp  stream.hpp  stream_to_img.hpp  yolo.hpp
notes/: debug_notes.md  summary.md  现场试验准备.md
src/: config.cpp  detect.cpp  main.cpp  meter_reader.cpp  mysql.cpp  postprocess.cu  preprocess.cu  pro_con.cpp  read_number.cu  segment.cpp  stream.cpp  stream_to_img.cpp
visulize/: vis.py
